# rustrag

./: .env.example  .gitignore  ACTIVITY_5_1_SUMMARY.md  ACTIVITY_5_3_SUMMARY.md  ACTIVITY_6_2_COMPLETION_REPORT.md  Cargo.toml  HYBRID_SEARCH_INTEGRATION_SUMMARY.md  README.md  docker-compose.yml
cache/embeddings/: 12720938724704517959_model_v1_bin.cache  15483751432953222849_model_v1_bin.cache
cli/: Cargo.toml
cli/src/: main.rs
docs/: authentication.md
examples/: content_validation_demo.rs  document_indexing.rs  embedding_cache_demo.rs  embedding_demo.rs  embedding_examples.rs  metadata_extraction_demo.rs  similarity_search_demo.rs  simple_indexing.rs  test_batch_optimizer.rs  test_cache.rs  test_connection_pool.rs  test_db_optimizer.rs  test_metrics.rs  test_qdrant_integration.rs
scripts/: dev-infra-simple.ps1  dev-infra.ps1  init.sql
src/: lib.rs  main.rs
src/api/: auth.rs  auth_endpoints.rs  documents.rs  error_handler.rs  health.rs  metrics.rs  middleware.rs  mod.rs  queries.rs  query_expansion.rs  query_expansion_temp.rs  rate_limit.rs  rate_limiter.rs  router.rs  types.rs  upload_document.rs
src/config/: settings.rs
src/core/: content_validator.rs  document_formats.rs  document_processor.rs  embedding_cache.rs  embeddings.rs  enhanced_query_processor.rs  enhanced_retrieval.rs  generation.rs  hybrid_search.rs  metadata_extractor.rs  mod.rs  query_expansion.rs  query_processor.rs  query_service.rs  relevance_scorer.rs  reranking.rs  retrieval.rs  similarity_search.rs
src/core/embeddings/: builder.rs  config.rs  examples.rs  mod.rs  service.rs
src/core/embeddings/providers/: candle.rs  mock.rs  mod.rs  onnx.rs  openai.rs
src/indexing/: document_indexer.rs  mod.rs
src/models/: document.rs  mod.rs  query.rs  response.rs
src/performance/: batch_optimizer.rs  cache.rs  connection_pool.rs  db_optimizer.rs  metrics.rs  mod.rs  simple_cache.rs
src/security/: audit.rs  encryption.rs  gdpr.rs  mod.rs  retention.rs  tls.rs
src/storage/: database.rs  file_storage.rs  mod.rs  vector_store.rs
src/utils/: error.rs  logging.rs  mod.rs
tests/: test_hybrid_search_integration.rs
