[package]
name = "rustrag"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Enterprise Contextual AI Assistant Platform using RAG"
license = "MIT"
repository = "https://github.com/yourusername/rustrag"
keywords = ["rag", "ai", "llm", "vector-search", "enterprise"]
categories = ["web-programming", "database", "text-processing"]

# Workspace configuration
[workspace]
members = [
    ".",
    "cli"
]

[dependencies]
# Web Framework & HTTP
axum = { version = "0.6", features = ["multipart"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["fs", "cors", "trace"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }

# Async Runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Configuration & Environment
config = "0.13"
dotenvy = "0.15"

# CLI (for main binary)
clap = { version = "4.0", features = ["derive", "env"], optional = true }

[dev-dependencies]
# Testing utilities
rstest = "0.18"
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.8"

[features]
default = ["web-server"]
web-server = ["axum", "tower", "tower-http"]
cli = ["clap"]

# Binary targets
[[bin]]
name = "rustrag-server"
path = "src/main.rs"
required-features = ["web-server"]

[[bin]]
name = "rustrag-cli"
path = "cli/src/main.rs"
required-features = ["cli"]

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Metadata for cargo-generate or similar tools
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
