[package]
name = "rustrag-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for RustRAG platform"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "color"] }

# Core functionality from parent crate
rustrag = { path = "..", default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators
indicatif = "0.17"

# Table formatting
tabled = "0.15"

# File operations
walkdir = "2.4"
