[package]
name = "rustrag-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for RustRAG platform"
license = "MIT"

# Define binary target for CLI
[[bin]]
name = "rustrag-cli"
path = "src/main.rs"
[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "color"] }

# Core functionality from parent crate
rustrag = { path = "..", default-features = false }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
